tooling/nargo_cli/tests/snapshots/execution_success/closures_mut_ref/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: Field) {
    let one: Field = 1;
    let add1: fn[(Field,)](&mut Field) = |z: &mut Field| { *(z) = *z + one; };
    let two: Field = 2;
    let add2: fn[(Field,)](&mut Field) = |z: &mut Field| { *(z) = *z + two; };
    add1(&mut x);
    assert(x == 1);
    add2(&mut x);
    assert(x == 3);
    issue_2120();
}

fn issue_2120() {
    let x1: &mut i32 = &mut 42;
    let set_x1: fn[(&mut i32,)](i32) = |y: i32| { *(x1) = y; };
    assert(*x1 == 42);
    set_x1(44);
    assert(*x1 == 44);
    set_x1(*x1);
    assert(*x1 == 44);
}
