tooling/nargo_cli/tests/snapshots/execution_success/closures_mut_ref/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    v1 = allocate -> &mut Field
    store v0 at v1
    (no terminator instruction)
}
